--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,13 @@
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
-
+packages = ["src/x-mcp"]
 [project]
 name = "x-mcp"
 version = "0.2.0"
 description = "X-mcp: Bridging Twitter and AI with the Model Context Protocol using Twikit"
 readme = "README.md"
-requires-python = ">=3.7"
+requires-python = ">=3.10"
 license = "MIT"
 authors = [
     { name = "lord-dubious", email = "chukwurahdavid@gmail.com" }
